--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       quisquam explicabo! Vel deserunt, officia, quam temporibus sit dolores
       porro amet nulla reiciendis sed delectus optio ipsam!
     </div>
-    <button class="btn">
+    <button
+     class="btn"
+      title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+      mollitia alias, distinctio incidunt voluptas nostrum.">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
       mollitia alias, distinctio incidunt voluptas nostrum.
     </button>
