--- a/index.html
+++ b/index.html
@@ -6,35 +6,9 @@
     <title>Practice</title>
   </head>
   <body>
-    <div class="content-block">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ea temporibus
-      eum in maxime, enim sapiente impedit at error repellendus amet mollitia
-      modi esse consequuntur velit, repudiandae itaque illo possimus, totam
-      ratione sed fugit. Quas perspiciatis, velit quam vel nam voluptatum
-      aspernatur dolor eaque animi, quos eligendi voluptatem fuga quae? Itaque
-      dolores corporis nesciunt ipsum pariatur omnis exercitationem, delectus
-      vitae consectetur minima nihil eligendi amet, quia soluta quae officia,
-      rerum officiis consequuntur reiciendis voluptates quibusdam. Enim odio
-      saepe voluptatem libero animi et iusto architecto corrupti mollitia id
-      aliquam totam eveniet suscipit ipsa, sapiente, amet optio, ipsam non
-      officiis unde quod perspiciatis repellat hic. Qui itaque animi deserunt
-      modi rerum ut impedit dolorem perferendis esse nobis odit labore, ad
-      praesentium? Dicta quibusdam ducimus tempore repellendus, omnis ex eaque
-      assumenda nostrum consequuntur repellat hic numquam temporibus atque,
-      dolorem fuga natus in ea, aut a asperiores fugit officia perspiciatis odit
-      earum. Consectetur ab commodi sapiente itaque enim autem quibusdam, quae
-      assumenda beatae voluptates doloremque quod maxime, blanditiis laudantium
-      dolores alias! Quos alias quae in. Autem quibusdam magnam cupiditate
-      dolorum natus maxime, repudiandae corrupti quas accusantium, nobis
-      quisquam explicabo! Vel deserunt, officia, quam temporibus sit dolores
-      porro amet nulla reiciendis sed delectus optio ipsam!
-    </div>
-    <button
-     class="btn"
-      title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-      mollitia alias, distinctio incidunt voluptas nostrum.">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-      mollitia alias, distinctio incidunt voluptas nostrum.
-    </button>
+
+   <div class="container">
+     
+   </div>
   </body>
 </html>
