--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <title>Practice</title>
   </head>
   <body>
-<div class="container">1</div>
-<div class="container hidden-ver1">2</div>
-<div class="container hidden-ver2">3</div>
-<div class="container hidden-ver3">4</div>
-<div class="container">5</div>
+    <div class="Wrapper"></div>
+
 
   
 </body>
