--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <title>Practice</title>
   </head>
   <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium,
+      adipisci.
+    </p>
     <div class="Wrapper"></div>
-
-
-  
-</body>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut in
+      exercitationem dolor nemo quasi cumque magnam nostrum dignissimos
+      molestias culpa.
+    </p>
+    <ul>
+      <list>test</list>
+      <list>test</list>
+      <list>test</list>
+      <list>test</list>
+      <list>test</list>
+    </ul>
+  </body>
 </html>
