--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./assets/css/reset.css/">
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    
     <title>Practice</title>
   </head>
   <body>
