Add list style-image Create folder - reset.css!!!!

--- a/index.html
+++ b/index.html
@@ -18,12 +18,23 @@
       exercitationem dolor nemo quasi cumque magnam nostrum dignissimos
       molestias culpa.
     </p>
-    <ul>
-      <list>test</list>
-      <list>test</list>
-      <list>test</list>
-      <list>test</list>
-      <list>test</list>
+    <ul class="list">
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
     </ul>
+    <ol class="list">
+      <li>text</li>
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+    <li>text</li>
+    <li>text</li></ol>
   </body>
 </html>
