Использование reset на практике

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/reset.css/">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/styles.css" />
     
     <title>Practice</title>
   </head>
   <body>
-    <p>
+    <h1>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium,
       adipisci.
-    </p>
+    </h1>
     <div class="Wrapper"></div>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut in
